--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     Cesium.Ion.defaultAccessToken = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiI4NWJhZDVhYy0wYTIyLTQ1Y2YtODg3Yi00OTNlZDU2OGExN2EiLCJpZCI6MTY1OTQwLCJpYXQiOjE2OTQ1MDI0NTJ9.i4nK7nO3cRuAf7qEcxugViRX2UnCrCXR3pRwd7htz9Y';
 
     // Initialize the Cesium Viewer in the HTML element with the `cesiumContainer` ID.
-    const viewer = new Cesium.Viewer('cesiumContainer', {
+    const viewer = new Cesium.Viewer('cesiumContainer', 
+    {
       terrain: Cesium.Terrain.fromWorldTerrain(),
     });    
 
