--- a/index.html
+++ b/index.html
@@ -6,75 +6,57 @@
   <script src="https://cesium.com/downloads/cesiumjs/releases/1.108/Build/Cesium/Cesium.js"></script>
   <link href="https://cesium.com/downloads/cesiumjs/releases/1.108/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
 </head>
-<body>
-  
-  <div id="cesiumContainer"></div>
-  
-  
-  <script type="module">
-    // Your access token can be found at: https://ion.cesium.com/tokens.
-    // This is the default access token from your ion account
 
-    Cesium.Ion.defaultAccessToken = '<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <!-- Include the CesiumJS JavaScript and CSS files -->
-  <script src="https://cesium.com/downloads/cesiumjs/releases/1.108/Build/Cesium/Cesium.js"></script>
-  <link href="https://cesium.com/downloads/cesiumjs/releases/1.108/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
-</head>
 <body>
+
+  <button id="btnFlyToTaipei" type="button">前往台北</button>
+  <button id="btnFlyToTaichung" type="button">前往台中</button>
+
   <div id="cesiumContainer"></div>
   <script type="module">
-    // Your access token can be found at: https://ion.cesium.com/tokens.
-    // This is the default access token from your ion account
+      // Your access token can be found at: https://ion.cesium.com/tokens.
+      // This is the default access token from your ion account
 
-    Cesium.Ion.defaultAccessToken = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiI4NWJhZDVhYy0wYTIyLTQ1Y2YtODg3Yi00OTNlZDU2OGExN2EiLCJpZCI6MTY1OTQwLCJpYXQiOjE2OTQ1MDI0NTJ9.i4nK7nO3cRuAf7qEcxugViRX2UnCrCXR3pRwd7htz9Y';
+      Cesium.Ion.defaultAccessToken = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiI4NWJhZDVhYy0wYTIyLTQ1Y2YtODg3Yi00OTNlZDU2OGExN2EiLCJpZCI6MTY1OTQwLCJpYXQiOjE2OTQ1MDI0NTJ9.i4nK7nO3cRuAf7qEcxugViRX2UnCrCXR3pRwd7htz9Y';
 
-    // Initialize the Cesium Viewer in the HTML element with the `cesiumContainer` ID.
-    const viewer = new Cesium.Viewer('cesiumContainer', 
-    {
-      terrain: Cesium.Terrain.fromWorldTerrain(),
-    });    
+      // Initialize the Cesium Viewer in the HTML element with the `cesiumContainer` ID.
+      const viewer = new Cesium.Viewer('cesiumContainer',
+          {
+              terrain: Cesium.Terrain.fromWorldTerrain(),
+          }
+      );
 
-    // Fly the camera to San Francisco at the given longitude, latitude, and height.
-    viewer.camera.flyTo({
-      destination: Cesium.Cartesian3.fromDegrees(121.5639,25.0341 , 1000),
-      orientation: {
-        heading: Cesium.Math.toRadians(0.0),
-        pitch: Cesium.Math.toRadians(-15.0),
-      }
-    });
 
-    // Add Cesium OSM Buildings, a global 3D buildings layer.
-    const buildingTileset = await Cesium.createOsmBuildingsAsync();
-    viewer.scene.primitives.add(buildingTileset);   
-  
-  
-  
-    </script>
- </div>
-</body>
-</html>';
+      document.getElementById('btnFlyToTaipei').addEventListener('click', function () {
+           alert('前往台北！');
+          // Fly the camera to San Francisco at the given longitude, latitude, and height.
+          viewer.camera.flyTo({
+              destination: Cesium.Cartesian3.fromDegrees(121.56444501316045, 25.03088782965679, 400),
+              orientation: {
+                  heading: Cesium.Math.toRadians(0.0),
+                  pitch: Cesium.Math.toRadians(-15.0),
+              }
+          });
 
-    // Initialize the Cesium Viewer in the HTML element with the `cesiumContainer` ID.
-    const viewer = new Cesium.Viewer('cesiumContainer', {
-      terrain: Cesium.Terrain.fromWorldTerrain(),
-    });    
+      });
+      document.getElementById('btnFlyToTaichung').addEventListener('click', function () {
+           alert('前往台中！');
+          // Fly the camera to San Francisco at the given longitude, latitude, and height.
+          viewer.camera.flyTo({
+              destination: Cesium.Cartesian3.fromDegrees( 120.64057007971904, 24.163069420254462, 400),
+              orientation: {
+                  heading: Cesium.Math.toRadians(0.0),
+                  pitch: Cesium.Math.toRadians(-15.0),
+              }
+          });
 
-    // Fly the camera to San Francisco at the given longitude, latitude, and height.
-    viewer.camera.flyTo({
-      destination: Cesium.Cartesian3.fromDegrees(-122.4175, 37.655, 400),
-      orientation: {
-        heading: Cesium.Math.toRadians(0.0),
-        pitch: Cesium.Math.toRadians(-15.0),
-      }
-    });
+      });
 
-    // Add Cesium OSM Buildings, a global 3D buildings layer.
-    const buildingTileset = await Cesium.createOsmBuildingsAsync();
-    viewer.scene.primitives.add(buildingTileset);   
+      // Add Cesium OSM Buildings, a global 3D buildings layer.
+      const buildingTileset = await Cesium.createOsmBuildingsAsync();
+      viewer.scene.primitives.add(buildingTileset);   
   </script>
- </div>
+  </div>
 </body>
+
 </html>
