--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
   <button id="btnFlyToTaipei" type="button">前往台北</button>
   <button id="btnFlyToTaichung" type="button">前往台中</button>
+  <button id="btnFlyToKaohsiung" type="button">前往高雄</button>
 
   <div id="cesiumContainer"></div>
   <script type="module">
@@ -26,12 +27,19 @@
           }
       );
 
+      // Fly the camera to San Francisco at the given longitude, latitude, and height.
+      viewer.camera.flyTo({
+              destination: Cesium.Cartesian3.fromDegrees(121.250059832782, 24.20496875917415, 8000),
+              orientation: {
+                  heading: Cesium.Math.toRadians(0.0),
+                  pitch: Cesium.Math.toRadians(-15.0),
+              }})
 
       document.getElementById('btnFlyToTaipei').addEventListener('click', function () {
            alert('前往台北！');
           // Fly the camera to San Francisco at the given longitude, latitude, and height.
           viewer.camera.flyTo({
-              destination: Cesium.Cartesian3.fromDegrees(121.56444501316045, 25.03088782965679, 400),
+              destination: Cesium.Cartesian3.fromDegrees(121.56444501316045, 25.03088782965679, 1000),
               orientation: {
                   heading: Cesium.Math.toRadians(0.0),
                   pitch: Cesium.Math.toRadians(-15.0),
@@ -43,7 +51,20 @@
            alert('前往台中！');
           // Fly the camera to San Francisco at the given longitude, latitude, and height.
           viewer.camera.flyTo({
-              destination: Cesium.Cartesian3.fromDegrees( 120.64057007971904, 24.163069420254462, 400),
+              destination: Cesium.Cartesian3.fromDegrees( 120.64057007971904, 24.163069420254462, 1000),
+              orientation: {
+                  heading: Cesium.Math.toRadians(0.0),
+                  pitch: Cesium.Math.toRadians(-15.0),
+              }
+          });
+
+      });
+
+      document.getElementById('btnFlyToKaohsiung').addEventListener('click', function () {
+           alert('前往高雄！');
+          // Fly the camera to San Francisco at the given longitude, latitude, and height.
+          viewer.camera.flyTo({
+              destination: Cesium.Cartesian3.fromDegrees( 120.30424161252664,22.61111580943805,  1000),
               orientation: {
                   heading: Cesium.Math.toRadians(0.0),
                   pitch: Cesium.Math.toRadians(-15.0),
